objects/Sales_Information_Object__c/fields/Car_Inventory_Object__c.field-meta.xml
<CustomField>
    <fullName>Car_Inventory_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Inventory Object</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Sales Information Objects</relationshipLabel>
    <relationshipName>Sales_Information_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>