objects/Sales_Information_Object__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price at which the car was sold.</description>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Sales Information Objects</relationshipLabel>
    <relationshipName>Sales_Information_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>