objects/Sales_Information_Object__c/fields/Customer_Information_Object__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Information Object</label>
    <referenceTo>Customer_Information_Object__c</referenceTo>
    <relationshipLabel>Sales Information Objects</relationshipLabel>
    <relationshipName>Sales_Information_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>