objects/Sales_Information_Object__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>Date of the sale.</description>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>